Modified Custom Pages to enhance functionality and UI

--- a/custom-pages/Home Page 1/Home Page 1.css
+++ b/custom-pages/Home Page 1/Home Page 1.css
@@ -2,8 +2,8 @@
   --und_thick: 3px;
   --und_top: 50px;
   --und_color: gold;
-  --dark-color: #151728;
-  --light_color: #36234f;
+  --dark-color: #1e213d;
+  --light_color: #4a316b;
 }
 
 body {
