--- a/waiting-is-awesome/mediaQueries.css
+++ b/waiting-is-awesome/mediaQueries.css
@@ -14,6 +14,9 @@
     .box{
         left: 0vw;
     }
+    section.loaders{
+        margin-top: 20%;
+    }
 }
 
 /* On screens that are 600px or less, set the background color to olive */
@@ -26,5 +29,8 @@
     }
     .box{
         display: none;
+    }
+    section.loaders{
+        margin-top: 40%;
     }
 }
